# hwloc-learning

./: CMakeLists.txt  cpu_bind.c  gpu.cpp  main.cpp
cmake/: FindHwloc.cmake
